--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -13,6 +13,9 @@
 .alt-header__title {
   font-size: 28px;
   font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .alt-header__column:first-child {
